--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     background-color: #000000;
+    padding: 11px 10px;
 }
 
 .navbar__button {
