--- a/src/css/pages/styles.css
+++ b/src/css/pages/styles.css
@@ -8,3 +8,4 @@
 @import url('/src/css/base/media.css');
 
 @import url('/src/css/components/header.css');
+@import url('/src/css/components/footer.css');
