--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -32,3 +32,8 @@ footer {
     justify-content: space-around;
 }
 
+.footer__line {
+    width: 100%;
+    height: 3px;
+    background-color: #ffffff;
+}
