--- a/src/css/pages/styles.css
+++ b/src/css/pages/styles.css
@@ -9,5 +9,7 @@
 
 @import url('/src/css/components/header.css');
 @import url('/src/css/components/footer.css');
+@import url('/src/css/components/hero.css');
 
 @import url('/src/css/layout/menu.css');
+@import url('/src/css/layout/home.css');
