rename pages et structure css carrousel

--- a/src/css/pages/styles.css
+++ b/src/css/pages/styles.css
@@ -12,6 +12,7 @@
 @import url('/src/css/components/hero.css');
 @import url('/src/css/components/button.css');
 @import url('/src/css/components/card.css');
+@import url('/src/css/components/carousel.css');
 
 @import url('/src/css/layout/menu.css');
 @import url('/src/css/layout/home.css');
