--- a/src/css/pages/styles.css
+++ b/src/css/pages/styles.css
@@ -1,5 +1,5 @@
 /* Polices */
-@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Mulish:wght@600&display=swap');
 
 @import url('/src/css/utils/variables.css');
 @import url('/src/css/normalize/normalize.css');
