--- a/src/css/components/carousel.css
+++ b/src/css/components/carousel.css
@@ -1,11 +1,54 @@
 .carousel {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    position: relative;
+}
 
+.carousel figcaption {
+    font-size: var(--heading-2);
+    color: #fff;
+    font-family: Fjalla One;
 }
 
 .carousel__container {
     
+    display: flex;
+    width: 100%;
+    height: auto;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+    background-color: #000;
 }
 
 .carousel__item {
+    flex: none;
+    width: 100%;
+    height: auto;
+    scroll-snap-align: start;
+}
 
+.carousel__item a {
+    text-decoration: none;
+}
+
+.carousel__button-left, .carousel__button-right {
+    position: absolute;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.carousel__button-left {
+    left: 0;
+    top: 45%;
+    rotate: 180deg;
+    width: 13%;
+}
+
+.carousel__button-right {
+    right: 0;
+    top: 45%;
+    width: 13%;
 }
