--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -1,16 +1,19 @@
 :root {
-    --yellow: #825F0E;
-    --brown: #4E4115;
-    --green: #3C483A;
-    --main-gray: #9B9A95;
-    --black: #1C1514;
-    --dark-gray: #989592;
-    --gray: #CDCAC7;
-    --light-gray: #E9E7E4;
-    --white: #FAFAFA;
-
-    --heading-1: 3rem;
-    --heading-1-5: 2.25rem;
-    --heading-2: 1.875rem;
-    --body: 1rem;
+    /* Color styles */
+        --color-1: rgba(28, 21, 20, 1);
+        --color-2: rgba(152, 149, 146, 1);
+        --color-4: rgba(233, 231, 228, 1);
+        --color-4: rgba(205, 202, 199, 1);
+        --color-3: rgba(250, 250, 250, 1);
+    
+        /* Text-size styles */
+        /* base size: body (16px) */
+        --heading: 3rem;
+        --heading-3: 1.56rem;
+        --footer: 2.25rem;
+        --body: 1rem;
+        --heading-2: 2.25rem;
+        --footer-2: 1rem;
+        --body-2: 1.25rem;
+        --body-3: 0.75rem;
 }
