--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -5,10 +5,30 @@
     font-size: 30px;
 }
 
-.hero__gradient {
+.hero__gradient-start {
     width: 100%;
     height: 66px;
-    position: relative;
-    bottom: 60px;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, #000 100%);
+    position: absolute;
+    top: 44%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, #1C1514 100%);
+}
+
+.hero__gradient-end {
+    width: 100%;
+    height: 66px;
+    position: absolute;
+    top: 90%;
+    background: linear-gradient(180deg, rgba(239, 239, 239, 0.00) 0%, #E9E7E4 65.1%);
+}
+
+.article__title {
+    background-color: var(--color-1);
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 70px;
+}
+
+.article__hero {
+    display: flex;
+    flex-direction: column;
 }
