--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -5,19 +5,11 @@
     font-size: 30px;
 }
 
-.hero__gradient-start {
-    width: 100%;
-    height: 66px;
-    position: absolute;
-    top: 44%;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, #1C1514 100%);
-}
-
 .hero__gradient-end {
     width: 100%;
     height: 66px;
-    position: absolute;
-    top: 90%;
+    position: relative;
+    bottom: 35px;
     background: linear-gradient(180deg, rgba(239, 239, 239, 0.00) 0%, #E9E7E4 65.1%);
 }
 
@@ -25,10 +17,26 @@
     background-color: var(--color-1);
     text-align: center;
     padding-top: 30px;
-    padding-bottom: 70px;
+    padding-bottom: 50px;
 }
 
 .article__hero {
+    display: flex;
+    flex-direction: column;
+}
+
+.article__hero img {
+    mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0.00) 0%, #1C1514 20%);
+}
+
+.other__title {
+    background-color: var(--color-1);
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 90px;
+}
+
+.other__hero {
     display: flex;
     flex-direction: column;
 }
