--- a/src/css/pages/styles.css
+++ b/src/css/pages/styles.css
@@ -17,3 +17,4 @@
 @import url('/src/css/layout/menu.css');
 @import url('/src/css/layout/home.css');
 @import url('/src/css/layout/article.css');
+@import url('/src/css/layout/other.css');
