--- a/src/css/pages/styles.css
+++ b/src/css/pages/styles.css
@@ -13,6 +13,7 @@
 @import url('/src/css/components/button.css');
 @import url('/src/css/components/card.css');
 @import url('/src/css/components/carousel.css');
+@import url('/src/css/components/contact.css');
 
 @import url('/src/css/layout/menu.css');
 @import url('/src/css/layout/home.css');
