--- a/src/css/pages/styles.css
+++ b/src/css/pages/styles.css
@@ -14,6 +14,7 @@
 @import url('/src/css/components/card.css');
 @import url('/src/css/components/carousel.css');
 @import url('/src/css/components/contact.css');
+@import url('/src/css/components/movie.css');
 
 @import url('/src/css/layout/menu.css');
 @import url('/src/css/layout/home.css');
