--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -21,7 +21,9 @@ h2 {
     font-family: Fjalla One;
     font-size: var(--heading-2);
     color: #fff;
-    margin: 0
+    margin: 0;
+    text-transform: uppercase;
+    
 }
 
 h3 {
