--- a/src/css/layout/article.css
+++ b/src/css/layout/article.css
@@ -10,13 +10,13 @@
     font-family: Mulish;
 }
 
-.article__music {
+.article__extra {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.article__music h3 {
+.article__extra h3 {
     font-size: var(--heading);
         color: #000;
         font-family: Fjalla One;
