--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -3,14 +3,17 @@
     justify-content: space-between;
     background-color: #000000;
     padding: 11px 10px;
+    align-items: center;
 }
+
+
 
 .navbar__button {
     background-color: transparent;
     border: none;
 }
 
-.navbar_button_container {
+.navbar__button {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -19,8 +22,32 @@
 }
 
 .navbar__button_lines {
-    width: 30px;
-    height: 10px;
+    width: 24px;
+    height: 4px;
     background-color: #ffffff;
     border-radius: 4px;
+    transition: all 0.4s ease-in-out
+}
+
+.navbar__button-open .line1, 
+.navbar__button-open .line1::before,
+.navbar__button-open .line1::after {
+    transform: rotate(45deg);
+    transform-origin: 0 100%;
+    transition: transform 0.4s ease-in-out;
+}
+
+.navbar__button-open .line2,
+.navbar__button-open .line2::before,
+.navbar__button-open .line2::after {
+    transform: scaleY(0);
+    transition: transform 0.4s ease-in-out;
+}
+
+.navbar__button-open .line3,
+.navbar__button-open .line3::before,
+.navbar__button-open .line3::after {
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+    transition: transform 0.4s ease-in-out;
 }
